--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -27,7 +27,7 @@
         <br>
         <div class = "container"> 
           <div style = "border: 2px solid black;">
-            <h6 style = "margin-top: 15px;"> Want to Browse Classes? Click Below</h6>
+            <h6 style = "font-size:20px;margin-top: 15px;"> Want to Browse Classes? Click Below</h6>
             <br>
             <a href="browse_courses"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Browse Classes </button></a>
           </div>
@@ -35,7 +35,7 @@
           <br>
           <br>
           <div style = "border: 2px solid black;">
-            <h6 style = "margin-top: 15px"> Want to Check Shopping Cart? Click Below</h6>
+            <h6 style = "font-size:20px; margin-top: 15px"> Want to Check Shopping Cart? Click Below</h6>
             <br>
             <a href="shopping_cart"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Go to Shopping Cart </button></a>
           </div>
@@ -43,7 +43,7 @@
           <br>
           <br>
           <div style = "border: 2px solid black;">
-            <h6 style = "margin-top: 15px;"> Want to Check Your Calendar? Click Below</h6>
+            <h6 style = "font-size:20px;margin-top: 15px;"> Want to Check Your Calendar? Click Below</h6>
             <br>
             <a href="calendar"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Go to Calendar </button></a>
           </div>
