--- a/myapp/templates/myapp/shoppingCart.html
+++ b/myapp/templates/myapp/shoppingCart.html
@@ -40,7 +40,11 @@
         <tr class = "main-rows">
             <td>{{course.course_mnemonic}} {{course.course_catalog_nbr}}</td>
             <td>{{course.course_subject}}</td>
-            <td>{{course.course_days_of_week}} {{course.course_start_time}} - {{course.course_end_time}} </td>
+            {% if course.course_start_time != "" %}
+              <td>{{course.course_days_of_week}} {{course.course_start_time}} - {{course.course_end_time}} </td>
+            {% else %}
+              <td>TBA</td>
+            {% endif %}
             <td>{{course.course_instructor}}</td>
             <td>{{course.course_enrollment_availability}}/{{course.course_size}}</td>
             <td>
