Completed work on the admin approval process.

--- a/myapp/templates/myapp/adminHome.html
+++ b/myapp/templates/myapp/adminHome.html
@@ -97,8 +97,22 @@
                 <p>{{ schedule.submitted_time }}</p>
                 <!--https://docs.djangoproject.com/en/4.1/ref/templates/language/ -->
                 {% for course in schedule.courses.all %}
-                    <li>{{course.course_subject}}</li>
+                    <p>{{course.course_subject}}</p>
                 {% endfor %}
+                <form method="POST" action="{% url 'approveSchedule' %}">
+                  {% csrf_token %}
+                  <input type="hidden" name="scheduleID" value="{{schedule.id}}">
+                  <button type="submit" name = "approved" class = "btn btn-success buttonShoppingCartandBrowseCourses"> <strong>Approve</strong>
+                    <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                        <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                      </svg>
+                  </button>
+                  <button type="submit" name = "rejected" class = "btn btn-danger buttonShoppingCartandBrowseCourses"> <strong>Reject</strong>
+                    <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                      <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                    </svg>
+                  </button>
+                </form>
             </div>
             <hr>
             <br>
