--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -192,7 +192,16 @@
   <h1>Submit Course Calender for Approval:</h1>
   <hr>
   <br>
-  <h3>Status: ADD FEATURE</h1>
+  <h3>Status:</h3>
+  {% if usersSchedule is None %}
+    <h4>Not Submitted</h1>
+  {% elif usersSchedule.isRejected%}
+    <h4>Rejected</h3>
+  {% elif usersSchedule.status %}
+    <h4>Approved</h1>
+  {% else %}
+    <h4>Pending</h1>
+  {% endif %}
   <br>
   <hr>
   <form method="POST" action="{% url 'createSchedule' user.pk %}">
