--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -3,13 +3,15 @@
 <html>
   {% extends 'myapp/base.html'%}
   {% load static %}
-  
+  <head>
 
   {% block content %}
   {% block cal_css %}
   <link rel="stylesheet" href="{% static 'myapp/calendar_style.css' %}">
   {% endblock %}
+  </head>
   <body class = "bannerWhiteGradient">
+    
   <table style="width:100%">
     <!-- For debugging: {% for day in schedule %}
       {% for courses in day %}
