--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -7,7 +7,6 @@
 #navLogo{
     font-weight: 750;
     letter-spacing: 2.5px;
-    border-bottom: 2px solid #1e6db3;
     
 }
 table{
@@ -49,7 +48,6 @@ table{
 }
 
 
-
 #splashPageText{
     display: flex;
   justify-content: center;
@@ -84,7 +82,6 @@ table{
 #splashPageButton{
     width: 100%;
 }
-
 #rontundaImage{
     height: 5vh;
     padding-right: 7.5px ;
@@ -147,4 +144,8 @@ table{
 .buttonShoppingCartandBrowseCourses{
     margin-top: 10px;
 }
-
+.login{
+    font-family: Montserrat; 
+    text-align: center;
+    font-size: 20px
+}
