--- a/myapp/templates/account/login.html
+++ b/myapp/templates/account/login.html
@@ -25,25 +25,30 @@
 <body class="banner">
     <div id="splashPageText">
        <div id="innerSplashPageBoxLogInScreen">
-
-<h1 class = "signInAndUpTextOnLoginAndSignUpPages">{% trans "Sign In" %}</h1>
-
+    <div class = "title" style = "text-align: center;
+    font-weight: bolder;
+    font-size: 35px;
+    font-family: Merriweather;"> Sign In </div>
+<!-- <h1 class = "signInAndUpTextOnLoginAndSignUpPages">{% trans "Sign In" %}</h1> -->
+<br>
 {% get_providers as socialaccount_providers %}
 
 {% if socialaccount_providers %}
-<p>{% blocktrans with site.name as site_name %}Please sign in with one
-of your existing third party accounts. Or, <a href="{{ signup_url }}">sign up</a>
-for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
-
-<div class="socialaccount_ballot">
-
-  <ul class="socialaccount_providers">
-    {% include "socialaccount/snippets/provider_list.html" with process="login" %}
-  </ul>
-
-  <div class="login-or">{% trans 'or' %}</div>
-
-</div>
+<h4 style = "font-size: 20px;
+font-family: Montserrat; text-align: center;">{% blocktrans with site.name as site_name %}Please sign in with one
+of your existing third party accounts. If you don't have an account, sign up below </h4>
+<br>
+<center>
+  <button class = "btn btn-dark btn-lg"> <a style = "font-family: Merriweather; text-decoration: none; color: inherit;color: white; font-weight: bold;" href="{{ signup_url }}">Sign Up</a></button>
+</center>
+<br>
+<h4 style = "font-family: Montserrat; text-align: center;font-size: 20px"> If you have an account: {% endblocktrans %}</h4>
+<br>
+<h4 style = "font-family: Montserrat; text-align: center;font-size: 20px">Sign in using {% include "socialaccount/snippets/provider_list.html" with process="login" %} </h4>
+<br>
+<h4 style = "font-family: Montserrat; text-align: center;font-size: 20px"> Or you can login below </h4>
+<br>
+  <!-- <div class="login-or">{% trans 'or' %}</div> -->
 
 {% include "socialaccount/snippets/login_extra.html" %}
 
@@ -52,14 +57,18 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 <a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}</p>
 {% endif %}
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<form class="login" method="POST" style = "font-family: Montserrat; 
+text-align: center;
+font-size: 20px;"{% url 'account_login' %}>
   {% csrf_token %}
   {{ form.as_p }}
   {% if redirect_field_value %}
   <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
   {% endif %}
-  <a class="button secondaryAction" href="{% url 'account_reset_password' %}">{% trans "Forgot Password?" %}</a>
-  <button class="primaryAction" type="submit">{% trans "Sign In" %}</button>
+  <button class="btn btn-dark btn-lg" type="submit" style = "font-family: Merriweather; text-decoration: none; color: inherit;color: white; font-weight: bold;">{% trans "Sign In" %}</button>
+  <br>
+  <br>
+  <a class="button secondaryAction" href = {% url 'account_reset_password' %} > {% trans "Forgot Password?" %}</a>
 </form>
 </div>
 </div>
