--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -13,15 +13,16 @@ table{
     border: 1.5px solid black;
     border-collapse: collapse;
   }
-.title-row th{
-    border: 1.5px solid black;
-    border-collapse: collapse;
+.title-row{
+    background-color: #009879;
+    color: #ffffff;
     text-align: center;
 }
 .main-rows td{
     border: 1.5px solid black;
     border-collapse: collapse; 
     text-align: center;
+    padding: 12px 15px;
 }
 .buttonShoppingCartandBrowseCourses {
     margin-bottom: 6px;
@@ -147,5 +148,5 @@ table{
 .login{
     font-family: Montserrat; 
     text-align: center;
-    font-size: 20px
+    font-size: 20px;
 }
