--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -59,6 +59,7 @@
 <body class = "bannerWhiteGradient">
   <div id ="SignedInScreenInnerContainer" class = "container">
     <br>
+    <center>
     <h1 id="">Browse Classes</h1>
     <hr>
       <form action="{% url 'api_data' %}" method="get">
@@ -154,6 +155,7 @@
         </select>
     <button type="submit">Submit</button>
   </form>
+</center>
   <br>
   <table style="width:100%">
     <tr class = "title-row">
