html and css changes

--- a/myapp/templates/account/signup.html
+++ b/myapp/templates/account/signup.html
@@ -1,3 +1,4 @@
+<title>Sign Up</title>
 {% extends "account/base.html" %}
 
 {% load i18n %}
@@ -5,7 +6,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-
+<title>Sign Up</title>
 <body class="banner">
     <div id="splashPageText">
        <div id="innerSplashPageBoxLogInScreen">
