--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!--Inspiration: https://codepen.io/alvarotrigo/pen/KKQzvdr -->
 <html>
+  <title>Calendar</title>
   {% extends 'myapp/base.html'%}
   {% load static %}
   <head>
@@ -10,6 +11,7 @@
   <link rel="stylesheet" href="{% static 'myapp/calendar_style.css' %}">
   {% endblock %}
   </head>
+  
   <body class = "bannerWhiteGradient">
     
   <table style="width:100%">
