--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -4,6 +4,8 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
+  <title>Home Page</title>
+  <link rel="icon" href="{% static 'myapp/University_of_Virginia_Rotunda_logo.svg' %}">
 {# Load the tag library #}
 {% load bootstrap5 %}
 
@@ -12,7 +14,6 @@
 {% bootstrap_javascript %}
 
 {# Display django.contrib.messages as Bootstrap alerts #}
-
 
 <header>
     <nav id = "wholeNavBar" class="navbar navbar-expand-lg navbar-light bg-light">
