--- a/myapp/templates/myapp/adminHome.html
+++ b/myapp/templates/myapp/adminHome.html
@@ -1,7 +1,11 @@
 {% load static %}
 
 <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
-
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
+<title>Home Page</title>
+<link rel="icon" href="{% static 'myapp/University_of_Virginia_Rotunda_logo.svg' %}">
 {# Load the tag library #}
 {% load bootstrap5 %}
 
@@ -10,44 +14,48 @@
 {% bootstrap_javascript %}
 
 {# Display django.contrib.messages as Bootstrap alerts #}
-{% bootstrap_messages %}
-
 
 <header>
-    <nav id = "wholeNavBar" class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-          <img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg">
+  <nav id = "wholeNavBar" class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a href="/"><img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg"></a>
 
-          <a id="navLogo" class="navbar-brand" href="/accounts/profile">Schedule Advisor</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <a id="navLogo" class="navbar-brand" style = "font-family: Montserrat;
+        color: black; font-size: 30px; padding-left: 5px;" href="/accounts/profile">Schedule Advisor</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarSupportedContent" aria-controls="offcanvasNavbar">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex = "-1" id="navbarSupportedContent" aria-labelledby="offcanvasNavbarLabel">
+          <div class="offcanvas-header" style = "text-align: center">
+            <h5 class="offcanvas-title" id="offcanvasNavbarLabel" style = "font-family: Merriweather;">Navigation Menu</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+          </div>
+          <div class = "offcanvas-body"> 
             <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="/accounts/profile">Home</a>
+                  <a class="nav-link" aria-current="page" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile">Home</a>
               </li>
               <li class = "nav-item"> 
                 {% if user.is_authenticated %}
                 <form action="/accounts/logout">
-                  <button class ="btn" style="background-color: #1e6db3; color: whitesmoke;">Log Out</button>
+                  <button class ="btn" style="background-color: #1e6db3; color: whitesmoke; margin-top: 4px;">Log Out</button>
                 </form>
                 {% else %}
                 <form action="/accounts/login">
-                  <button class ="btn" style="background-color: #1e6db3; color: whitesmoke;">Log In</button>
+                  <button class ="btn" style="background-color: #1e6db3; color: whitesmoke; margin-top: 4px;">Log In</button>
                 </form>
                   {% endif %}
               </li>
-              <li class="nav-item dropdown">
-                  <!--
-              <li class="nav-item">
-                <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-              </li>
-              -->
-            </ul>
           </div>
+                <!--
+            <li class="nav-item">
+              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+            </li>
+            -->
+          </ul>
         </div>
-      </nav>
+      </div>
+    </nav>
 </header>
 
 <!--
