More HTML changes, slightly changed TCF stuff

--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -183,7 +183,8 @@
               <script>
                 function redirectToExternal(var1, var2, var3) {
                     var url = "https://thecourseforum.com/" + var1 + "/" + var2 + "/" + var3;
-                    window.location.href = url;
+                    //window.location.href = url;
+                    window.open(url); //opens in new tab
                 }
             </script>
           </td>
