--- a/myapp/templates/account/base.html
+++ b/myapp/templates/account/base.html
@@ -1,12 +1,12 @@
-{% extends 'myapp/base.html'%}
+{% load static%}
+
+{# Load the tag library #}
+{% load bootstrap5 %}
+
+{# Load CSS and JavaScript #}
+{% bootstrap_css %}
+{% bootstrap_javascript %}
 
 {% block content %}
 
-{% load static%}
-
-
-
-
-
-
-  {% endblock %}
+ {% endblock %}
