--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -33,12 +33,7 @@
             <div class = "offcanvas-body"> 
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  {% if user.is_authenticated %}
-                    <a class="nav-link" aria-current="page" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile">Home</a>
-                  {% else %}
-                    <a class="nav-link" aria-current="page" style = "font-family: Montserrat Black;font-size: 20px;" href="/">Home</a>
-                  
-                  {% endif %}
+                  <a class="nav-link" aria-current="page" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile/">Home</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile/browse_courses">Browse Courses</a>
