--- a/myapp/templates/myapp/shoppingCart.html
+++ b/myapp/templates/myapp/shoppingCart.html
@@ -63,8 +63,9 @@
               <button id="course{{ forloop.counter }}" class = "btn btn-primary" onclick = "redirectToExternal('{{courseVar}}', '{{ course.course_mnemonic }}', '{{ course.course_catalog_nbr}}')"> Course Forum Link</button>
               <script>
                 function redirectToExternal(var1, var2, var3) {
-                    var url = "https://thecourseforum.com/" + var1 + "/" + var2 + "/" + var3;
-                    window.location.href = url;
+                  var url = "https://thecourseforum.com/" + var1 + "/" + var2 + "/" + var3;
+                  //window.location.href = url;
+                  window.open(url); //opens in new tab
                 }
             </script>
             </td>
