--- a/myapp/templates/account/signup.html
+++ b/myapp/templates/account/signup.html
@@ -1,6 +1,7 @@
 <title>Sign Up</title>
+{%comment%}
 {% extends "account/base.html" %}
-
+{%endcomment%}
 {% block content %}
 
 {% load static%}
@@ -53,21 +54,20 @@
 <body class="banner">
     <div id="splashPageText">
        <div id="innerSplashPageBoxLogInScreen">
+          <h1 class="signInAndUpTextOnLoginAndSignUpPages">{% trans "Sign Up" %}</h1>
 
-<h1 class="signInAndUpTextOnLoginAndSignUpPages">{% trans "Sign Up" %}</h1>
+        <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
-
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
-</div>
-</div>
+        <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+          {% csrf_token %}
+          {{ form.as_p }}
+          {% if redirect_field_value %}
+          <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+          {% endif %}
+          <button type="submit">{% trans "Sign Up" %} &raquo;</button>
+        </form>
+      </div>
+    </div>
 </body>
 
 {% endblock %}
