--- a/myapp/static/myapp/style.css
+++ b/myapp/static/myapp/style.css
@@ -14,7 +14,7 @@ table{
     border-collapse: collapse;
   }
 .title-row{
-    background-color: #009879;
+    background-color: rgb(79, 78, 78);
     color: #ffffff;
     text-align: center;
 }
@@ -92,8 +92,8 @@ table{
     background-color: whitesmoke;
     padding-left: 100px;
     padding-right: 100px;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 75px;
     border-radius: 25px;
     
 }
