Time conflict resolutions

--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -15,7 +15,7 @@
   <body class = "bannerWhiteGradient">
     
   <table style="width:100%">
-    <!-- For debugging: {% for day in schedule %}
+    <!-- Debugging: {% for day in schedule %}
       {% for courses in day %}
       <tr>
         <td>{{courses.course_days_of_week}} </td>
