--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -132,7 +132,7 @@
           <th>Type and Amount of Credits</th>
         </div>
         <div class = "col col-lg-3 col-md-3 col-sm-3"> 
-          <th>Time</th>
+          <th>Days & Time</th>
         </div>
         <div class = "col col-lg-3 col-md-3 col-sm-3"> 
           <th>Professor</th>
@@ -156,7 +156,7 @@
             </div>
             <div class = "col col-lg-3 col-md-3 col-sm-3">
               {% if class_object.course_start_time != "" %}
-                <td>{{class_object.course_start_time}} - {{class_object.course_end_time}}</td>
+                <td>{{class_object.course_days_of_week}} {{class_object.course_start_time}} - {{class_object.course_end_time}}</td>
               {% else %}
               <td>TBA</td>
               {% endif %}
