fixed some bugs

--- a/myapp/templates/myapp/calendar.html
+++ b/myapp/templates/myapp/calendar.html
@@ -207,7 +207,9 @@
       </tr>
   {% endfor %}
   </table>
-
+  <center>
+  <a href="/accounts/profile/shopping_cart"><button class = "btn btn-lg btn-primary"> Add More Courses To Calendar</button></a>
+</center>
   <br>
   <br>
   <br>
