Fixed time agreements bug

--- a/myapp/templates/myapp/courses.html
+++ b/myapp/templates/myapp/courses.html
@@ -22,7 +22,7 @@
   <div id ="SignedInScreenInnerContainer" class = "container">
     <br>
     <center>
-    <h1 id="">Browse Classes</h1>
+    <h1 id="">Browse Courses</h1>
     <hr>
       <form action="{% url 'api_data' %}" method="get">
           {% csrf_token %}
