--- a/myapp/templates/myapp/profile.html
+++ b/myapp/templates/myapp/profile.html
@@ -24,9 +24,9 @@
         <br>
         <div class = "container"> 
           <div style = "border: 2px solid black;">
-            <h6 style = "font-size:20px;margin-top: 15px;"> Want to Browse Classes? Click Below</h6>
+            <h6 style = "font-size:20px;margin-top: 15px;"> Want to Browse Courses? Click Below</h6>
             <br>
-            <a href="browse_courses"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Browse Classes </button></a>
+            <a href="browse_courses"><button class = "btn btn-primary btn-lg" style = "margin-bottom: 15px;"> Browse Courses </button></a>
           </div>
           <br>
           <br>
