--- a/myapp/templates/myapp/base.html
+++ b/myapp/templates/myapp/base.html
@@ -1,11 +1,5 @@
 {% load static %}
 
-<link rel="stylesheet" href="{% static 'myapp/style.css' %}">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap" rel="stylesheet">
-  <title>Home Page</title>
-  <link rel="icon" href="{% static 'myapp/University_of_Virginia_Rotunda_logo.svg' %}">
 {# Load the tag library #}
 {% load bootstrap5 %}
 
@@ -15,13 +9,35 @@
 
 {# Display django.contrib.messages as Bootstrap alerts #}
 
+<head>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap">
+  <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+  <title>Home</title>
+  <link rel="icon" href="{% static 'myapp/University_of_Virginia_Rotunda_logo.svg' %}">
+</head>
+<head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap">
+  <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+  <style>
+    a{
+      font-family: 'Montserrat';
+      font-display: swap;
+      src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCvr6Hw3aXpsog.woff2) format('woff2');
+    }
+    .alert-messages {
+      font-weight: bolder !important;
+    }
+  </style>
+</head>
 <header>
     <nav id = "wholeNavBar" class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
           <a href="/"><img id = "rontundaImage" class = "image" src ="https://upload.wikimedia.org/wikipedia/commons/d/dd/University_of_Virginia_Rotunda_logo.svg"></a>
 
           <a id="navLogo" class="navbar-brand" style = "font-family: Montserrat;
-          color: black; font-size: 30px; padding-left: 5px;" href="/accounts/profile">Schedule Advisor</a>
+          color: black; font-size: 30px; padding-left: 5px; font-weight: bolder;" href="/accounts/profile">Schedule Advisor</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#navbarSupportedContent" aria-controls="offcanvasNavbar">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -33,25 +49,25 @@
             <div class = "offcanvas-body"> 
               <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                  <a class="nav-link" aria-current="page" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile/">Home</a>
+                  <a class="nav-link" aria-current="page" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile/browse_courses">Browse Courses</a>
+                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/browse_courses">Browse Courses</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile/shopping_cart">Shopping Cart</a>
+                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/shopping_cart">Shopping Cart</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px;" href="/accounts/profile/calendar">Calendar</a>
+                  <a class="nav-link" style = "font-family: Montserrat Black;font-size: 20px; font-weight: normal;" href="/accounts/profile/calendar">Calendar</a>
                 </li>
                 <li class = "nav-item"> 
                   {% if user.is_authenticated %}
                   <form action="/accounts/logout">
-                    <button class ="btn" style="background-color: #1e6db3; color: whitesmoke; margin-top: 4px;">Log Out</button>
+                    <button class ="btn" style="background-color: #1e6db3; color: whitesmoke; margin-top: 4px; font-weight: bolder;">Log Out</button>
                   </form>
                   {% else %}
                   <form action="/accounts/login">
-                    <button class ="btn" style="background-color: #1e6db3; color: whitesmoke; margin-top: 4px;">Log In</button>
+                    <button class ="btn" style="background-color: #1e6db3; color: whitesmoke; margin-top: 4px; font-weight: bolder;">Log In</button>
                   </form>
                     {% endif %}
                 </li>
