--- a/myapp/templates/myapp/shoppingCart.html
+++ b/myapp/templates/myapp/shoppingCart.html
@@ -5,6 +5,26 @@
 {% load static%}
 
 {% block content %}
+<head>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Merriweather:wght@900&family=Montserrat:wght@200&family=Roboto:ital,wght@1,300&family=Sacramento&display=swap">
+  <link rel="stylesheet" href="{% static 'myapp/style.css' %}">
+  <style>
+    h1,h2,h3,h4,h5,h6,button,select,option,table,th,td,label{
+      font-weight: bolder !important;
+      font-family: 'Montserrat';
+      font-display: swap;
+      src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCvr6Hw3aXpsog.woff2) format('woff2');
+    }
+    .alert-messages {
+      font-family: 'Montserrat';
+      font-weight: bolder !important;
+      src: url(https://fonts.gstatic.com/s/montserrat/v25/JTUHjIg1_i6t8kCHKm4532VJOt5-QNFgpCvr6Hw3aXpsog.woff2) format('woff2');
+    }
+    a{
+      font-weight: normal !important;
+    }
+  </style>
+</head>
 <script>
   function updateColor() {
     var isChecked = document.getElementById("time_switch").checked;
@@ -36,7 +56,6 @@
   <div id ="SignedInScreenInnerContainer" class = "container">
     <center>
     <h1>Shopping Cart</h1>
-    <hr>
     {% if courses_in_calendar|length >= 1 and courses_in_cart|length != courses_in_calendar|length %}
     <form method="POST" action="{% url 'shoppingCart' %}">
       {% csrf_token %}
@@ -53,7 +72,7 @@
     <br>
     <center>
       <h4>You have no courses in your Cart</h4>
-      <a href="/accounts/profile/browse_courses"><button class = "btn btn-lg btn-primary"> Add Courses To Cart</button></a>
+      <a href="/accounts/profile/browse_courses"><button class = "btn btn-lg btn-primary"> Add More Courses To Cart</button></a>
     </center>
     <br>
   {% else %}
@@ -132,7 +151,7 @@
                 <form method="POST" action="{% url 'removeFromSchedule' course.pk%}">
                   {% csrf_token %}
                   <input type="hidden" name="pk" value="{{ course.pk }}">
-                  <button type="submit" class = "btn btn-danger buttonShoppingCartandBrowseCourses"><strong>Drop Course</strong>
+                  <button type="submit" class = "btn btn-danger buttonShoppingCartandBrowseCourses">Drop Course
                     <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                         <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                       </svg>
@@ -143,7 +162,7 @@
               <form method="POST" action="{% url 'addToSchedule' course.pk%}">
                 {% csrf_token %}
                 <input type="hidden" name="pk" value="{{ course.pk }}">
-                <button type="submit" class = "btn btn-success buttonShoppingCartandBrowseCourses"><strong>Add Course</strong>
+                <button type="submit" class = "btn btn-success buttonShoppingCartandBrowseCourses">Add Course
                   <svg xmlns="https://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check" viewBox="0 0 16 16">
                     <path d="M10.97 4.97a.75.75 0 0 1 1.07 1.05l-3.99 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.267.267 0 0 1 .02-.022z"/>
                   </svg>
